--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">bin-information-cft</string>
+    <string name="text_header">Информация с помощью BIN</string>
     <string name="hint_input">Enter the first digits of a card number (BIN/IIN)</string>
     <string name="tv_label_scheme">SCHEME / NETWORK</string>
     <string name="tv_label_brand">BRAND</string>
