--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="tv_label_country">COUNTRY</string>
     <string name="tvTextBankNameCity">%s, %s</string>
     <string name="tvTextCountryAlpha2NameCurrency">%s, %s, %s</string>
+    <string name="default_bin">4571 7360</string>
+    <string name="error">Произошла ошибка!</string>
 </resources>
